Fixed button text alignment.

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ button {
     font-size: 3rem;
     border: solid rgb(36, 45, 48) 0.15rem;
     transition: color 0.8s;
+    text-align: center;
 }
 button:hover {
     color: rgb(242, 51, 102);
